# spectral-scripts

./: .gitignore  LICENSE  Makefile  README.md  ocr_config.yaml  pyproject.toml
data/confusion_matrices/glm/: glm_pipeline_report.md  latin.json  latin.npz  pipeline_results.json
data/confusion_matrices/tesseract/: arabic.json  arabic.npz  cyrillic.json  cyrillic.npz  greek.json  greek.npz  latin.json  latin.npz  pipeline_results.json  tesseract_pipeline_report.md
data/raw/: dataset_summary.json
data/raw/ground_truth/: arabic_labels.txt  cyrillic_labels.txt  greek_labels.txt  latin_labels.txt
scripts/: generate_report.py  prepare_dataset.py  run_analysis.py  run_ocr_pipeline.py  run_synthetic_validation.py  run_text_to_image.py
src/spectral_scripts/: __init__.py
src/spectral_scripts/core/: __init__.py  confusion_matrix.py  eigen.py  normalization.py
src/spectral_scripts/distance/: __init__.py  baselines.py  matrix.py  wasserstein.py
src/spectral_scripts/features/: __init__.py  interpretable.py  profile.py  spectral.py
src/spectral_scripts/ocr_pipeline/: __init__.py  character_matching.py  cli.py  config.py  data_ingestion.py  export.py  matrix_builder.py  ocr_engine.py  validation.py
src/spectral_scripts/statistics/: __init__.py  corrections.py
src/spectral_scripts/validation/: sanity.py  (+5 more)
tests/: conftest.py
tests/test_core/: test_confusion_matrix.py  test_eigen.py  test_normalization.py
tests/test_distance/: test_baselines.py  test_wasserstein.py
tests/test_features/: test_spectral.py
tests/test_validation/: test_sanity.py  test_synthetic.py
(+14 files in other folders)
